fix sidebar overlaping

--- a/chrome/browser/potato-main.css
+++ b/chrome/browser/potato-main.css
@@ -48,7 +48,7 @@ splitter.devtools-horizontal-splitter,
       --uc-content-margin-bottom: var(--uc-content-margin);
       --uc-content-margin-left: var(--uc-content-margin);
 
-      & #appcontent {
+      & #appcontent, tabbox#tabbrowser-tabbox{
         margin: var(--uc-content-margin-top) var(--uc-content-margin-right)
           var(--uc-content-margin-bottom) var(--uc-content-margin-left) !important;
         & browser {
@@ -118,6 +118,6 @@ splitter.devtools-horizontal-splitter,
   }}
 
   @media (-moz-bool-pref: "uc.tweak.translucency") and (-moz-platform: macos) {
-    -moz-appearance: menupopup !important;
+    -moz-appearance: -moz-window-titlebar !important;
   }
 }
