--- a/chrome/browser/potato-sidebar.css
+++ b/chrome/browser/potato-sidebar.css
@@ -125,7 +125,7 @@
 
     #sidebar-box {
       position: relative;
-      z-index: 1;
+      z-index: 10;
       min-width: var(--uc-sidebar-width) !important;
       width: var(--uc-sidebar-width) !important;
       max-width: var(--uc-sidebar-width) !important;
