--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -7,9 +7,9 @@
 :root {
   @media not (-moz-bool-pref: "uc.tweak.no-panel-hint") {
     --uc-panel-hint: color-mix(
-      in srgb,
-      var(--toolbarbutton-icon-fill),
-      transparent 75%
+      in oklab,
+      var(--toolbarbutton-icon-fill) 25%,
+      transparent
     );
   }
 
@@ -29,9 +29,9 @@
   --uc-bg: var(--uc-bg-opaque);
   --uc-bg-tran: var(--uc-bg-opaque);
   --uc-bg-translucency: color-mix(
-    in srgb,
-    var(--uc-bg-opaque),
-    transparent 10%
+    in oklab,
+    var(--uc-bg-opaque) 90%,
+    transparent
   );
   @media not (-moz-bool-pref: "uc.tweak.no-blur") {
     --uc-bg-tran: var(--uc-bg-translucency);
